--- a/trang3.html
+++ b/trang3.html
@@ -9,10 +9,10 @@
 	<div id="background1">
 		<marquee id="marq" scrollamount="10" direction="left" loop="30" scrolldelay="0">
 
-<a href="https://www.facebook.com/leminhphuong.piupiu" target="_blank"><img src="image/mg.jpg" title="Click me hihihi" width="600" height="700"/> </a>
-<a href="https://www.facebook.com/leminhphuong.piupiu" target="_blank"><img src="image/mg1.jpg" title="Click me hihihi" width="600" height="700"/> </a>
-<a href="https://www.facebook.com/leminhphuong.piupiu" target="_blank"><img src="image/mg2.jpg" title="Click me hihihi" width="600" height="700"/> </a>
-<a href="https://www.facebook.com/leminhphuong.piupiu" target="_blank"><img src="image/mg3.jpg" title="Click me hihihi" width="600" height="700"/> </a>
+<a href="https://www.facebook.com/dungvanhizz" target="_blank"><img src="image/mg.jpg" title="Click me hihihi" width="600" height="700"/> </a>
+<a href="https://www.facebook.com/dungvanhizz" target="_blank"><img src="image/mg1.jpg" title="Click me hihihi" width="600" height="700"/> </a>
+<a href="https://www.facebook.com/dungvanhizz" target="_blank"><img src="image/mg2.jpg" title="Click me hihihi" width="600" height="700"/> </a>
+<a href="https://www.facebook.com/dungvanhizz" target="_blank"><img src="image/mg3.jpg" title="Click me hihihi" width="600" height="700"/> </a>
 </marquee>
 <br>
 <br>
